updated instrution to test app in ICP CF